# audio-plugin-template

./: CMakeLists.txt  CMakePresets.json
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/source/: AudioProcessorTest.cpp
